--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   font-family: "Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
   margin: 0;
   padding: 20px;
-  background-color: #ddd;
+  background-color: rgb(9, 128, 122);
   line-height: 1.8;
 }
 
@@ -25,6 +25,7 @@ img{
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px 0px rgba(0,0,0,0.2);
+  color: blanchedalmond;
 }
 
 #namecard{
